tests/cases/structs/errors/union-by-constructor-dynamic-selector.ari
enum PacketKind {
  stream,
  block,
}

struct StreamPayload {
  value: i64,
}

struct BlockPayload {
  value: i64,
}

struct Packet {
  kind: PacketKind,
  fragment: union by kind {
    stream => StreamPayload,
    block => BlockPayload,
  },
}

fn choose_kind() -> PacketKind {
  return stream;
}

fn main() -> i64 {
  let packet = Packet {
    kind: choose_kind(),
    fragment: stream(StreamPayload { value: 41 }),
  };
  return 0;
}
